--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@microsoft/arbutus.person-tile": "^1.0.8",
     "@microsoft/arbutus.prop-table": "^1.0.8",
     "@microsoft/arbutus.recommendation-tile": "^1.0.8",
+    "@microsoft/arbutus.resource-chip": "^0.0.2",
     "@microsoft/arbutus.shell": "^1.1.8",
     "@microsoft/arbutus.tabs": "^1.0.7",
     "@microsoft/arbutus.tag": "^1.0.4",
