--- a/src/content/pages/components.reference-1.json
+++ b/src/content/pages/components.reference-1.json
@@ -1,6 +1,6 @@
 {
   "_layout": "reference",
-  "_path": "/components/reference-page-1",
+  "_path": "/components/reference-1",
   "title": "Reference Page 1",
   "definition": "Define this component: what is the use case for it and when to use it.",
   "quickResources": [
