--- a/src/content/pages/components.reference-2.json
+++ b/src/content/pages/components.reference-2.json
@@ -1,6 +1,6 @@
 {
   "_layout": "reference",
-  "_path": "/components/reference-page-2",
+  "_path": "/components/reference-2",
   "title": "Reference Page 2",
   "definition": "Define this component: what is the use case for it and when to use it.",
   "quickResources": [
