--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "sharp": "^0.33.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@griffel/webpack-extraction-plugin": "^0.4.4",
+    "@griffel/webpack-loader": "^2.2.7",
     "@microsoft/arbutus.prop-docs-cli": "^1.0.4",
     "@microsoft/arbutus.ts": "^0.0.2",
     "@microsoft/eslint-config-arbutus": "^0.0.4",
@@ -80,6 +83,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-fetch": "^3.3.2",
     "query-string": "^8.1.0",
     "text-case": "^1.0.9",
